@@ -1,3 +1,7 @@
+2006-05-31  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/xglfill.c: Fix integer overflow issue.
+
 2006-05-30  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/xglfill.c (xglFillSegment): Fix typo that caused some
